--- a/src/styles/_article.scss
+++ b/src/styles/_article.scss
@@ -8,7 +8,6 @@
   @extend .features;
   background: white;
   text-align: left;
-  border: solid red 1px;
   &__title {
     text-align: center;
   }
