--- a/src/styles/_features.scss
+++ b/src/styles/_features.scss
@@ -9,7 +9,6 @@
   padding: 2.7em 0;
   background: $neutral-light-grayish-blue;
   text-align: center;
-  border: solid yellow 1px;
   &__subtitle {
     margin-bottom: 2.7em;
   }
