--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -11,6 +11,7 @@
   display: flex;
   align-items: center;
   position: relative;
+  color: $primary-dark-blue;
   &__logo {
     margin-right: auto;
   }
@@ -40,8 +41,6 @@
 .hero {
   text-align: center;
   padding-bottom: 2.5rem;
-  border: solid red 3px;
-  overflow: auto;
   &__image {
     height: 45vh;
     width: 100%;
